Updated documentation emoticons.

--- a/doc/styles.css
+++ b/doc/styles.css
@@ -37,15 +37,18 @@ a[rel="external"] {
 	padding-bottom: 20px;
 }
 
-.raise_output .smile {
+.smile {
+	font-family: Pragmata, Menlo, 'DejaVu LGC Sans Mono', 'DejaVu Sans Mono', Consolas, 'Everson Mono', 'Lucida Console', 'Andale Mono', 'Nimbus Mono L', 'Liberation Mono', FreeMono, 'Osaka Monospaced', Courier, 'New Courier', monospace;
 	background-color: #4e9a06;
 }
 
-.raise_output .frown {
+.frown {
+	font-family: Pragmata, Menlo, 'DejaVu LGC Sans Mono', 'DejaVu Sans Mono', Consolas, 'Everson Mono', 'Lucida Console', 'Andale Mono', 'Nimbus Mono L', 'Liberation Mono', FreeMono, 'Osaka Monospaced', Courier, 'New Courier', monospace;
 	background-color: #FF0000;
 }
 
-.raise_output .normal {
+.normal {
+	font-family: Pragmata, Menlo, 'DejaVu LGC Sans Mono', 'DejaVu Sans Mono', Consolas, 'Everson Mono', 'Lucida Console', 'Andale Mono', 'Nimbus Mono L', 'Liberation Mono', FreeMono, 'Osaka Monospaced', Courier, 'New Courier', monospace;
 	color: #000000;
 	background-color: #c4a000;
 }
