--- a/doc/styles.css
+++ b/doc/styles.css
@@ -6,6 +6,14 @@ body {
 	margin-right: 10%;
 }
 
+table, th, td {
+	border: 1px solid black;
+}
+
+th, td {
+	padding: 10px;
+}
+
 h1 {
 	font-weight: bold;
 	font-family: Arial, Helvetica, Georgia, serif;
